Sigil 0.7.5 TBA
    - Add the svg image tag as an svg inline element (not a block element) and
      add it as an empty element (TidyEmptyTags).
    - Allow user defined list of entities to preserve.
    - Pull request #10: Add ability to move entries in TOC up and down.
    - Pull request #8: Allow pasting HTML as HTML or plain text in BookView.

Sigil 0.7.4 2013.10.27
    - Use numeric entity for non-breaking spaces (nbsp) instead of named
      entity. Fixes issues where files without a doctype won't open properly.

Sigil 0.7.3 2013.08.03
    - Fix issue 2309: Compile failure due to case issue on m_lastFolderOpen.
    - Fix issue 2269: "Conflicts with:" always in English.
    - Fix issue 2186: Sigil 0.7.2 crashes on "Add existing files".
    - Fix issue 2232: The nbsp characters in UTF-8 files are converted to normal spaces.
    - Fix issue 2201: Save does not prompt for filename if filename not set
      after cancelling save operation.
    - Fix issue 2193: Incorrect country code used for Serbia.
    - Implement issue 2199: Mac, Don't open empty book by default.

Sigil 0.7.2 2013.04.14
    - Implement issue 2129: Enhance archive filename encoding handling.
    - Implement issue 2128: Warnings for non-ASCII characters in filenames.
    - Implement issue 2113: Preview should zoom separately from other views.
    - Implement issue 1997: Tool to Add Cover image and file automatically.
    - Implement issue 1993: Find & Replace should have a Marked Text option.
    - Implement issue 2083: Enhance invalid OPF recovery.
    - Implement issue 2082: Improve performance of Book Browser refresh.
    - Fix issue 2170: Spellcheck should remember position after changing word.
    - Fix issue 2148: Don't delete cover image in "Delete unused media files".
    - Fix issue 2147: Doubleclick in Delete Files dialog can cause crash.
    - Fix issue 2143: Bulk rename with just a number for filename does not use correct number of 0s.