@@ -1,4 +1,5 @@
 Sigil 0.7.5 TBA
+    - Plugin framework.
     - Add the svg image tag as an svg inline element (not a block element) and
       add it as an empty element (TidyEmptyTags).
     - Allow user defined list of entities to preserve.
